 * Create trunk/tags/branches directories for project when project is created.
 * Improved conversion speed significantly, especially for large repositories.
 * Ignore (with a warning) symbols defined to malformed revision numbers.
 * Tolerate multiple definitions of a symbol to the same revision number.
 * Handle RCS files that superfluously set the default branch to trunk.

 Miscellaneous:


Version 2.0.1 (04 October 2007)
-------------------------------

 Bugs fixed:
 * Fix problem with keyword expansion when using --use-internal-co.


Version 2.0.0 (15 August 2007)
------------------------------

 New features:
 * Add --use-internal-co to speed conversions, and make it the default.
 * Add --retain-conflicting-attic-files option.
 * Add --no-cross-branch-commits option.
 * Add --default-eol option and deprecate --no-default-eol.
 * RevisionRecorder hook allows file text/deltas to be recorded in pass 1.
 * RevisionReader hook allow file text to be retrieved from RevisionRecorder.
 * Slightly changed the order that properties are set, for more flexibility.
 * Don't set svn:keywords on files for which svn:eol-style is not set.
 * Implement issue #53: Allow --trunk='' for --trunk-only conversions.

 Bugs fixed:
 * Fix issue #97: Follow symlinks within CVS repository.
 * Fix issue #99: cvs2svn tries to create a file twice.
 * Fix issue #100: cvs2svn doesn't retrieve the right version.
 * Fix issue #105: Conflict between directory and Attic file causes crash.
 * Fix issue #106: SVNRepositoryMirrorParentMissingError.
 * Fix missing command-line handling of --fallback-encoding option.
 * Fix issue #85: Disable symbol sanity checks when in --trunk-only mode.

 Improvements and output changes:
 * Analyze CVS revision dependency graph, giving a more robust conversion.
 * Improve choice of symbol parents when CVS history is ambiguous.
 * In the case of clock skew to the past, resync forwards, not backwards.