@@ -87,6 +87,7 @@ from cvs2svn_lib.symbol_strategy import HeuristicPreferredParentRule
 from cvs2svn_lib.symbol_strategy import SymbolHintsFileRule
 from cvs2svn_lib.symbol_transform import ReplaceSubstringsSymbolTransform
 from cvs2svn_lib.symbol_transform import RegexpSymbolTransform
+from cvs2svn_lib.symbol_transform import NormalizePathsSymbolTransform
 from cvs2svn_lib.property_setters import AutoPropsPropertySetter
 from cvs2svn_lib.property_setters import CVSBinaryFileDefaultMimeTypeSetter
 from cvs2svn_lib.property_setters import CVSBinaryFileEOLStyleSetter
@@ -498,10 +499,10 @@ run_options.add_project(
             #                      r'release-\1.\2'),
             #RegexpSymbolTransform(r'release-(\d+)_(\d+)_(\d+)',
             #                      r'release-\1.\2.\3'),
-            # The following two rules convert any slash characters
-            # found in symbol names to '++' and '--' respectively:
-            ReplaceSubstringsSymbolTransform('/','++'),
-            ReplaceSubstringsSymbolTransform('\\','--'),
+            # Convert backslashes into forward slashes:
+            ReplaceSubstringsSymbolTransform('\\','/'),
+            # Eliminate leading, trailing, and repeated slashes:
+            NormalizePathsSymbolTransform(),
             ],
         symbol_strategy_rules=global_symbol_strategy_rules + [
             # Additional, project-specific symbol strategy rules can
@@ -523,10 +524,10 @@ run_options.add_project(
 #            #                      r'release-\1.\2'),
 #            #RegexpSymbolTransform(r'release-(\d+)_(\d+)_(\d+)',
 #            #                      r'release-\1.\2.\3'),
-#            # The following two rules convert any slash characters
-#            # found in symbol names to '++' and '--' respectively:
-#            ReplaceSubstringsSymbolTransform('/','++'),
-#            ReplaceSubstringsSymbolTransform('\\','--'),
+#            # Convert backslashes into forward slashes:
+#            ReplaceSubstringsSymbolTransform('\\','/'),
+#            # Eliminate leading, trailing, and repeated slashes:
+#            NormalizePathsSymbolTransform(),
 #            ],
 #        symbol_strategy_rules=global_symbol_strategy_rules + [
 #            # Additional, project-specific symbol strategy rules can
